Implement get transaction url endpoint
